Whoops, realized that I forgot to add some files for picking. Also, adding the beginnings of color manipulation.

--- a/SceneViewer/SceneViewer.vcxproj
+++ b/SceneViewer/SceneViewer.vcxproj
@@ -67,6 +67,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
+    <ClCompile Include="ComponentColorPanel.cpp" />
     <ClCompile Include="Framebuffer.cpp" />
     <ClCompile Include="jsoncpp\json_reader.cpp" />
     <ClCompile Include="jsoncpp\json_value.cpp" />
@@ -79,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
+    <ClInclude Include="ComponentColorPanel.h" />
     <ClInclude Include="Framebuffer.h" />
     <ClInclude Include="JsonUtils.h" />
     <ClInclude Include="Picker.h" />
