--- a/SceneViewer/SceneViewer.vcxproj.filters
+++ b/SceneViewer/SceneViewer.vcxproj.filters
@@ -31,6 +31,9 @@
     <ClCompile Include="Picker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ComponentColorPanel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Picker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ComponentColorPanel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
