--- a/SceneViewer/SceneViewer.vcxproj.filters
+++ b/SceneViewer/SceneViewer.vcxproj.filters
@@ -89,6 +89,9 @@
     <ClInclude Include="Scene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RenderOptions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Parameters.txt">
