--- a/SceneViewer/SceneViewer.vcxproj.filters
+++ b/SceneViewer/SceneViewer.vcxproj.filters
@@ -31,15 +31,16 @@
     <ClCompile Include="Picker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ComponentColorPanel.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Model.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Scene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ColorPanel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ComponentPanel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
@@ -77,9 +78,6 @@
     <ClInclude Include="Picker.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ComponentColorPanel.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="FLTKUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -92,6 +90,10 @@
     <ClInclude Include="RenderOptions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ColorPanel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ComponentPanel.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Parameters.txt">
