Work in progress on segmentation; trying a different approach to generating group mask.

--- a/SceneViewer/SceneViewer.vcxproj
+++ b/SceneViewer/SceneViewer.vcxproj
@@ -80,6 +80,7 @@
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Picker.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="SegmentMesh.cpp" />
     <ClCompile Include="WSSScene.cpp" />
     <ClCompile Include="UTF8Model.cpp" />
   </ItemGroup>
@@ -95,6 +96,7 @@
     <ClInclude Include="Picker.h" />
     <ClInclude Include="RenderOptions.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="SegmentMesh.h" />
     <ClInclude Include="WSSScene.h" />
     <ClInclude Include="UTF8Model.h" />
   </ItemGroup>
