--- a/SceneViewer/SceneViewer.vcxproj.filters
+++ b/SceneViewer/SceneViewer.vcxproj.filters
@@ -43,6 +43,9 @@
     <ClCompile Include="ComponentPanel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SegmentMesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
@@ -99,6 +102,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ColorGroup.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SegmentMesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
