--- a/SceneViewer/SceneViewer.vcxproj.filters
+++ b/SceneViewer/SceneViewer.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClCompile Include="SegmentMesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SegmentFeatures.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
@@ -105,6 +108,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SegmentMesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SegmentFeatures.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
