--- a/PaletteExtraction/PaletteExtraction.csproj
+++ b/PaletteExtraction/PaletteExtraction.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColorWheel.cs" />
     <Compile Include="Extract.cs">
       <SubType>Form</SubType>
     </Compile>
