Skeleton latex project, and some other miscellany.

--- a/.gitignore
+++ b/.gitignore
@@ -28,11 +28,19 @@
 *.cache
 *.resources
 *.idb
-*.png
-*.png
-*.png
-*.png
-*.png
-*.png
-*.png
-*.png
+/Colourlovers
+/PatternColorizer/out
+/PatternColorizer/bin
+/PatternColorizer/obj
+/PaletteExtraction/obj
+/PaletteExtraction/bin
+/SegmentModel/permutationStats
+/SegmentModel/out
+/paletteExtractionWorkspace
+/SceneToolbox/Output
+/SceneToolbox/Debug/*.ilk
+/SceneToolbox/Debug/*.ilk
+/latex/siggraph2013/*.aux
+/latex/siggraph2013/*.bbl
+/latex/siggraph2013/*.blg
+/latex/siggraph2013/*.tps
