Adding support for reading in patterns from multiple subdirectories

--- a/PatternColorizer/PatternColorizer.csproj
+++ b/PatternColorizer/PatternColorizer.csproj
@@ -89,6 +89,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="PatternIO.cs" />
     <Compile Include="SegmentMesh.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
